# mysql_fastapi_vue_sample_project

backend/: README.md  pyproject.toml  security.py
